fix(form): inverted state forms colors
The state colors in inverted form and inverted message were too dark for field label and message text
I adjusted them so they now match a error field input label to make it readable and consistent

--- a/src/definitions/collections/form.less
+++ b/src/definitions/collections/form.less
@@ -686,6 +686,13 @@
     .ui.form .field.@{state} .checkbox .box:after {
       color: @c;
     }
+
+    & when (@variationFormInverted) {
+      .ui.inverted.form .fields.@{state} .field label,
+      .ui.inverted.form .@{state}.field label {
+        color: @lbg;
+      }
+    }
   })
 }
 
