--- a/src/definitions/collections/message.less
+++ b/src/definitions/collections/message.less
@@ -296,6 +296,7 @@
       boxShadow      : @positiveBoxShadow;
       boxFloatShadow : @positiveBoxFloatingShadow;
       text           : @positiveTextColor;
+      invertedText   : @positiveBorderColor;
     };
     @negative: {
       background     : @negativeBackgroundColor;
@@ -303,6 +304,7 @@
       boxShadow      : @negativeBoxShadow;
       boxFloatShadow : @negativeBoxFloatingShadow;
       text           : @negativeTextColor;
+      invertedText   : @negativeBorderColor;
     };
     @info: {
       background     : @infoBackgroundColor;
@@ -310,6 +312,7 @@
       boxShadow      : @infoBoxShadow;
       boxFloatShadow : @infoBoxFloatingShadow;
       text           : @infoTextColor;
+      invertedText   : @formInfoLabelBackground;
     };
     @warning: {
       background     : @warningBackgroundColor;
@@ -317,6 +320,7 @@
       boxShadow      : @warningBoxShadow;
       boxFloatShadow : @warningBoxFloatingShadow;
       text           : @warningTextColor;
+      invertedText   : @formWarningLabelBackground;
     };
     @error: {
       background     : @errorBackgroundColor;
@@ -324,6 +328,7 @@
       boxShadow      : @errorBoxShadow;
       boxFloatShadow : @errorBoxFloatingShadow;
       text           : @errorTextColor;
+      invertedText   : @formErrorLabelBackground;
     };
     @success: {
       background     : @successBackgroundColor;
@@ -331,6 +336,7 @@
       boxShadow      : @successBoxShadow;
       boxFloatShadow : @successBoxFloatingShadow;
       text           : @successTextColor;
+      invertedText   : @formSuccessLabelBackground;
     };
   }
 
@@ -343,6 +349,7 @@
     @bs: @consequences[@@color][boxShadow];
     @bfs: @consequences[@@color][boxFloatShadow];
     @t: @consequences[@@color][text];
+    @it: @consequences[@@color][invertedText];
 
     .ui.@{color}.message {
       background-color: @bg;
@@ -360,6 +367,12 @@
     }
     .ui.@{color}.message .header {
       color: @hd;
+    }
+    & when (@variationMessageInverted) {
+      .ui.inverted.@{color}.message,
+      .ui.inverted.@{color}.message .header {
+        color: @it;
+      }
     }
   })
 }
